syntax = "proto3";

package pb;

option go_package = "../protobuf";

import "google/api/annotations.proto";

service UserService {
  rpc SyncUser(SyncReq) returns (SyncRes) {
    option (google.api.http) = {
      get: "/sync/{username}"
    };
  }
}

message SyncReq {
  string username = 1;
}

message SyncRes {
  string message = 1;
}